@@ -1,5 +1,10 @@
 2010-06-25  Jeffrey Stedfast  <fejj@novell.com>
 
+	* multiscaleimage.h: Made Emit*() methods private. Renamed
+	tile_available() to tile_opened() for consistency.
+
+2010-06-25  Jeffrey Stedfast  <fejj@novell.com>
+
 	* deepzoomimagetilesource.h: Renamed msi_cb to
 	MultiScaleImageCallback.
 
